🐛 fix: Copie auto previews dans _site/offers/
❌ Problème: Cannot GET /offers/previews/standard/
- Previews générés dans offers/previews/
- Mais pas dans _site/ pour Eleventy dev server

✅ Solution:
- Ajout copie auto dans generate-offers.mjs
- Copie offers/previews → _site/offers/previews
- Après chaque génération d'offres

🔧 Modifications:
- generate-offers.mjs: copie auto à la fin
- Erreur 404 sur previews résolue

✅ Maintenant: npm run auto → previews accessibles
✅ http://localhost:8080/offers/previews/standard/ OK

--- a/offers/comparatif.html
+++ b/offers/comparatif.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comparatif Offres - Serrurerie Rapide Toulouse</title>
+  <title>Comparatif Offres - Mon Entreprise</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { 
@@ -111,7 +111,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎯 Choisissez votre offre - Serrurerie Rapide Toulouse</h1>
+    <h1>🎯 Choisissez votre offre - Mon Entreprise</h1>
     <div style="text-align: center; margin-bottom: 30px;">
       <a href="navigation.html" style="display: inline-block; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 15px 40px; border-radius: 10px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
         🚀 Voir les 3 sites en preview interactif
